# ai-systems

./: pyproject.toml
lab01/: main.py
lab06/: README.md  main.py
lab07/: README.md  main.py
lab08/: README.md  main.py
lab09/: README.md  main.py
lab10/: README.md  main.py
